kubernetes/applications/update-center/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: update-center
  labels:
    pod-security.kubernetes.io/enforce: restricted
