kubernetes/applications/update-center/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: update-center-oauth2-proxy
  namespace: update-center
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: update-center-oauth2-proxy
  ports:
    - name: http
      port: 4180
      targetPort: http
