kubernetes/applications/update-center/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: update-center
  namespace: update-center
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: update-center
  ports:
    - name: http
      port: 8080
      targetPort: http
